<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/emergency"
        android:title="@string/emergency"
        android:icon="@drawable/emergency"
        android:theme="@style/MenuItemBackground" />
<!--    <item-->
<!--        android:id="@+id/addmore"-->
<!--        android:title="Add Friends"-->
<!--        android:icon="@drawable/addfrnd"-->
<!--        android:theme="@style/MenuItemBackground" />-->

    <item
        android:id="@+id/Location"
        android:title="User Location"
        android:icon="@drawable/loc"
        android:theme="@style/MenuItemBackground"/>

<!--    <item-->
<!--        android:id="@+id/PeriodCalculator"-->
<!--        android:title="Personal Calender"-->
<!--        android:icon="@drawable/calender"-->
<!--        android:theme="@style/MenuItemBackground"/>-->

    <item
        android:id="@+id/aboutus"
        android:title="@string/contact_us"
        android:icon="@drawable/contactus"
        android:theme="@style/MenuItemBackground"/>

    <item
        android:id="@+id/health"
        android:title="@string/store"
        android:icon="@drawable/cart"
        android:theme="@style/MenuItemBackground"/>
    <item
        android:id="@+id/Profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        android:theme="@style/MenuItemBackground"/>
    <item
        android:id="@+id/logout"
        android:title="Log Out"
        android:icon="@drawable/logout2_o"
        android:theme="@style/MenuItemBackground"/>


</menu>
