<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAcc"
    android:background="@color/h"
    android:gravity="center"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:weightSum="2">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/loginoo"
                android:outlineSpotShadowColor="@color/white"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="start">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="0dp"
                    android:text="@string/not_feeling_safe"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="2dp"
                    android:text="@string/log_in_here"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_margin="8dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_your_email1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_marginEnd="4dp" />
            <EditText
                android:id="@+id/emailLi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Email"
                android:textStyle="italic"
                android:textColorHint="@color/d"
                android:background="@drawable/edittext"
                android:hint="Email"
                android:padding="2dp"
                android:gravity="center"
                android:maxHeight="45dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_margin="8dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_your_password1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_marginEnd="2dp" />
            <EditText
                android:id="@+id/passwordLI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColorHint="@color/d"
                android:textStyle="italic"
                android:background="@drawable/edittext"
                android:hint="Password"
                android:padding="2dp"
                android:gravity="center"
                android:maxHeight="45dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:weightSum="2">
            <Button
                android:id="@+id/Loginbtn"
                android:layout_margin="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:backgroundTint="@color/d"
                android:textSize="18sp"
                android:textStyle="italic"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:id="@+id/forgotpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/d"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/guestLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Guest Login"
                    android:layout_weight="1"
                    android:textColor="@color/d"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:layout_margin="8dp"
                    android:layout_gravity="end"
                    android:gravity="center"/>
            </LinearLayout>

            <TextView
                android:id="@+id/Logintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/don_t_have_any_account"
                android:textColor="@color/d"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
