<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAcc"
    android:background="@color/h"
    android:gravity="end"
    android:layout_gravity="end">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_margin="8dp"
            android:weightSum="2">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieViewcreateAcc"
                android:layout_width="100dp"
                android:layout_height="200dp"
                app:lottie_rawRes="@raw/signin"
                android:layout_weight="0.5"
                app:lottie_autoPlay="true"
                android:layout_marginBottom="16dp"
                android:clipToOutline="true" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="0dp"
                    android:text="@string/not_feeling_safe"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="2dp"
                    android:text="@string/create_new_account"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:layout_marginBottom="15dp"
                app:boxStrokeColor="@color/white"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailca"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:layout_marginBottom="15dp"
                app:boxStrokeColor="@color/white"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/createaccbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_one"
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="@color/d"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_margin="40dp" />

            <TextView
                android:id="@+id/createacctxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/d"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
